<resources>
    <string name="politics">정치</string>
    <string name="social">사회</string>
    <string name="feed">피드</string>
    <string name="economy">경제</string>
    <string name="it">IT</string>
    <string name="sport">스포츠</string>
    <string name="life_culture">생활/문화</string>
    <string name="international_global">국제/글로벌</string>
    <string name="entertainment_broadcast">연예/방송</string>
    <string name="invalid_url">잘못된 URL 입니다.</string>
    <string name="search_news">뉴스 검색</string>
    <string name="share">공유</string>
    <string name="bookmark">북마크</string>
    <string name="description_option">옵션</string>
    <string name="feature_topic_scrap">스크랩</string>
    <string name="feature_topic_scrap_do">스크랩하기</string>
    <string name="feature_topic_scrap_complete">스크랩 완료</string>
    <string name="feature_topic_scrap_doing">스크랩 중…</string>
    <string name="feature_topic_scrap_error">스크랩 에러 발생</string>

    <string name="feature_topic_category_business">비즈니스</string>
    <string name="feature_topic_category_entertainment">엔터테인먼트</string>
    <string name="feature_topic_category_general">일반</string>
    <string name="feature_topic_category_health">건강</string>
    <string name="feature_topic_category_science">과학</string>
    <string name="feature_topic_category_sports">스포츠</string>
    <string name="feature_topic_category_technology">기술</string>
</resources>