<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="org.bmsk.topic.ui.topic.TopicFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/notFoundAnimationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/search_not_found" />

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/fragment_topic_scene">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/bottomLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_news" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <HorizontalScrollView
                    android:id="@+id/chipGroupScrollView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/textInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        style="@style/Widget.Material3.ChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/economyChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/economy"
                            tools:checked="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/politicsChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/politics"
                            tools:checked="false" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/socialChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/social" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/lifeCultureChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/life_culture" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/internationalGlobalChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/international_global" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/entertainmentBroadcastChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/entertainment_broadcast" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/sportChip"
                            style="@style/Widget.Material3.Chip.Suggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> fragment.onChipClicked(view)}"
                            android:text="@string/sport" />
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_news"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomOptionLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/rectangle_top_r25"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/shareButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_share_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:gravity="start"
                    android:padding="16dp"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bookmarkButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:gravity="start"
                    android:padding="16dp"
                    android:text="@string/bookmark"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_baseline_bookmark_border_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shareButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>